=== Maintenance

* 1 major enhancement

  * it { should matcher } - syntax support from Joe Ferris

* 1 minor enhancement

  * should throw_symbol accepts an optional argument: should throw_symbol(:sym, arg)

=== Version 1.1.11 / 2008-10-24

* 1 major enhancement

  * eliminate ALL gem dependencies (as they were causing trouble for people on different platforms/environments)

=== Version 1.1.10 / 2008-10-24

* 1 minor enhancement

  * hash.should include(:key => 'value') #when you don't care about the whole hash

* 2 bug fixes

  * fix --help output (had inaccurate info about 'nested' formatter)
  * eliminate spicycode-rcov dev dependency for rubygems < 1.3

=== Version 1.1.9 / 2008-10-20

WARNING: This release removes implicit inclusion of modules in example groups.
This means that if you have 'describe MyModule do', MyModule will not be
included in the group.

* 2 major enhancements

  * Add extend to configuration (thanks to advice from Chad Fowler)
  * Modules are no longer implicitly included in example groups

* 4 minor enhancements

  * mingw indicates windows too (thanks to Luis Lavena for the tip)
  * improved output for partial mock expecation failures
  * it_should_behave_like now accepts n names of shared groups
  * eliminated redundant inclusion/extension of ExampleGroupMethods

* 6 bug fixes

  * spec command with no arguments prints help
  * fixed typo in help. Fixes #73.
  * fixed bug where should_receive..and_yield after similar stub added the args_to_yield to the stub's original args_to_yield (Pat Maddox)
  * fixed bug where rspec-autotest (autospec) was loading non-spec files in spec directory. Fixes #559.
  * fixed bug where should_not_receive was reporting twice
  * fixed bug where rspec tries to run examples just because it is required (even if there are no examples loaded). Fixes #575.

=== Version 1.1.8 / 2008-10-03

* 2 bug fixes

  * restore colorized output in linux and windows w/ autotest (Tim Pope). Fixes #413.